syntax = "proto3";

import "eraftpb.proto";
import "common.proto";

package meteora.raft;

service RaftService {
    rpc ChangeConfig(eraftpb.ConfChange) returns(ChangeReply) {}
    rpc SendMsg(eraftpb.Message) returns(meteora.common.Null) {}
    rpc SendAddress(AddressState) returns(meteora.common.Null) {}
}

message AddressState {
    map<uint64, meteora.common.NodeAddress> address_map = 1;
}

message ChangeReply {
    meteora.common.State state = 1;
    map<uint64, meteora.common.NodeAddress> address_map = 2;
    uint64 leader_id = 3;
}
